--- a/now-archive/index.html
+++ b/now-archive/index.html
@@ -109,7 +109,7 @@ Jun 24, 2020  Moved my blog from Jekyll to Hugo and now customizing some templat
 
 
 <script>feather.replace()</script><p class="h-card vcard" style="display:none;">
-    <a style="text-decoration: none" href="http://rrajath.com" class="p-name u-url url p-author metatag" rel="me">
+    <a style="text-decoration: none" href="https://rrajath.com" class="p-name u-url url p-author metatag" rel="me">
     Rajath Ramakrishna</a>
     <a rel="author">Rajath Ramakrishna</a>
     <a class="p-nickname u-email email metatag" rel="me" href="mailto:r.rajath@pm.me">
