--- a/about/index.html
+++ b/about/index.html
@@ -103,7 +103,8 @@
     <a style="text-decoration: none" href="https://rrajath.com" class="p-name u-url url p-author metatag" rel="me">
     Rajath Ramakrishna</a>
     <a rel="author">Rajath Ramakrishna</a>
-    <a class="p-nickname u-email email metatag" rel="me" href="mailto:r.rajath@pm.me">
+    <a class="p-nickname" rel="me">Rajath</a>
+    <a class="u-email email metatag" rel="me" href="mailto:r.rajath@pm.me">
     r.rajath@pm.me
     </a>
     <img class="u-photo" src="images/micro-post-photo.png" alt="" />
