--- a/now-archive/index.html
+++ b/now-archive/index.html
@@ -112,7 +112,8 @@ Jun 24, 2020  Moved my blog from Jekyll to Hugo and now customizing some templat
     <a style="text-decoration: none" href="https://rrajath.com" class="p-name u-url url p-author metatag" rel="me">
     Rajath Ramakrishna</a>
     <a rel="author">Rajath Ramakrishna</a>
-    <a class="p-nickname u-email email metatag" rel="me" href="mailto:r.rajath@pm.me">
+    <a class="p-nickname" rel="me">Rajath</a>
+    <a class="u-email email metatag" rel="me" href="mailto:r.rajath@pm.me">
     r.rajath@pm.me
     </a>
     <img class="u-photo" src="images/micro-post-photo.png" alt="" />
