2020 - year in review

--- a/knowledge/circle_of_competence/index.html
+++ b/knowledge/circle_of_competence/index.html
@@ -108,7 +108,7 @@
 <li>
 <p>3 steps to build a CoC:</p>
 <ol>
-<li>Be willing to learn. Learn from books, podcasts, articles, experiences and others&rsquo; mistakes.</li>
+<li>Be willing to learn. Learn from books, podcasts, articles, experiences and others' mistakes.</li>
 <li>Monitor where you have or want to have a CoC. You need to be honest about your failures in order to reflect and learn from them. Maintaining a journal of your own performance helps with this.</li>
 <li>Solicit external feedback. Others see you and your skills in a different perspective. They won&rsquo;t be biased as you are.</li>
 </ol>
