new post: 2021 year in review

--- a/series/year-in-review/index.html
+++ b/series/year-in-review/index.html
@@ -11,15 +11,15 @@
     <link rel="micropub" href="https://blotpub-rrajath.herokuapp.com/micropub" />
     <link rel="me" href="https://micro.blog/rrajath" />
 	<meta charset="utf-8" />
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>Series - Rajath Ramakrishna</title><link rel="icon" type="image/png" href=icons/rrajath_favicon.png /><meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="alternate" type="application/rss+xml" href="/series/index.xml" title="Rajath Ramakrishna" />
-	<meta property="og:title" content="Series" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge"><title>year-in-review - Rajath Ramakrishna</title><link rel="icon" type="image/png" href=icons/rrajath_favicon.png /><meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="alternate" type="application/rss+xml" href="/series/year-in-review/index.xml" title="Rajath Ramakrishna" />
+	<meta property="og:title" content="year-in-review" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="/series/" />
+<meta property="og:url" content="/series/year-in-review/" />
 
 <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Series"/>
+<meta name="twitter:title" content="year-in-review"/>
 <meta name="twitter:description" content=""/>
 <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,300italic,400italic|Raleway:200,300" rel="stylesheet">
 
@@ -29,7 +29,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
 	<script src="/js/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.4.1.js"></script>
-	<link rel="alternate" type="application/rss+xml" href="/series/index.xml" title="Rajath Ramakrishna" />
+	<link rel="alternate" type="application/rss+xml" href="/series/year-in-review/index.xml" title="Rajath Ramakrishna" />
 	</head>
 
 
@@ -75,28 +75,7 @@
 </div>
 
 
-		<h1 class="page-title">Series</h1>
-
-		
-
-		
-		
-		
-		
-		
-
-		
-		<div class="tag-cloud">
-		
-			
-			
-			<a style="font-size: 1rem;" href="/series/hugo-setup/">hugo-setup</a>
-		
-			
-			
-			<a style="font-size: 1rem;" href="/series/year-in-review/">year-in-review</a>
-		
-		</div>
+		<h1 class="page-title">All tags</h1>
 	</div>
 
 	<div class="footer wrapper">
